# pythonl

./: LEESMIJ.md  README.md  console_script.py  fiben.py  fibnl.pynl  hoofd.pynl  is_a.pynl  nummers.txt  pyproject.toml  pythonl  pythonl.pynl  requirements.txt  voorbeeld.pynl
.github/: README.md
